# rusci-render

./: .gitignore  Cargo.toml  Plan.md
.github/workflows/: ci.yml
crates/osci-core/: Cargo.toml
crates/osci-core/benches/: shape_bench.rs
crates/osci-core/src/: effect.rs  envelope.rs  frame.rs  lfo.rs  lib.rs  parameter.rs  point.rs  shape.rs
crates/osci-effects/: Cargo.toml
crates/osci-effects/benches/: effect_bench.rs
crates/osci-effects/src/: bitcrush.rs  bounce.rs  bulge.rs  dashed_line.rs  delay.rs  duplicator.rs  frequency.rs  god_ray.rs  kaleidoscope.rs  lib.rs  multiplex.rs  perspective.rs  polygonizer.rs  registry.rs  ripple.rs  rotate.rs  scale.rs  skew.rs  smooth.rs  spiral_bitcrush.rs  swirl.rs  threshold.rs  translate.rs  twist.rs  unfold.rs  vector_cancelling.rs  volume.rs  vortex.rs  wobble.rs
crates/osci-effects/tests/: effect_tests.rs
crates/osci-gui/: Cargo.toml
crates/osci-gui/src/: dialogs.rs  effect_panel.rs  lib.rs  menu_bar.rs  project.rs  scope.rs  state.rs  theme.rs
crates/osci-net/: Cargo.toml
crates/osci-net/src/: blender.rs  config.rs  frame_channel.rs  lib.rs  server.rs  shared_texture.rs  websocket.rs
crates/osci-parsers/: Cargo.toml
crates/osci-parsers/src/: audio.rs  file_parser.rs  gif.rs  gpla.rs  image.rs  lib.rs  lua.rs  obj.rs  svg.rs  text.rs
crates/osci-parsers/tests/: parser_tests.rs
crates/osci-plugin/: Cargo.toml
crates/osci-plugin/src/: lib.rs
crates/osci-standalone/: Cargo.toml
crates/osci-standalone/src/: main.rs
crates/osci-synth/: Cargo.toml
crates/osci-synth/benches/: synth_bench.rs
crates/osci-synth/src/: frame_producer.rs  lib.rs  renderer.rs  sound.rs  synthesizer.rs  voice.rs
crates/osci-synth/tests/: pipeline_tests.rs
crates/osci-visualizer/: Cargo.toml
crates/osci-visualizer/src/: bloom.rs  compositor.rs  fbo.rs  lib.rs  line_renderer.rs  persistence.rs  quad.rs  recorder.rs  renderer.rs  settings.rs  shaders.rs
crates/rusci/: Cargo.toml
crates/rusci-standalone/: Cargo.toml
crates/rusci-standalone/src/: main.rs
crates/rusci/src/: lib.rs
