[package]
name = "osci-gui"
version.workspace = true
edition.workspace = true

[dependencies]
osci-core = { workspace = true }
osci-effects = { workspace = true }
crossbeam = { workspace = true }
nih_plug = { workspace = true }
nih_plug_egui = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
