[package]
name = "osci-gui"
version.workspace = true
edition.workspace = true

[dependencies]
osci-core = { workspace = true }
osci-effects = { workspace = true }
osci-visualizer = { workspace = true }
crossbeam = { workspace = true }
nih_plug = { workspace = true }
nih_plug_egui = { workspace = true }
egui_glow = { workspace = true }
glow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rfd = { workspace = true, optional = true }
log = { workspace = true }

[features]
default = []
file-dialog = ["rfd"]
