[package]
name = "osci-net"
version.workspace = true
edition.workspace = true

[dependencies]
osci-core = { workspace = true }
osci-parsers = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam = { workspace = true }
glow = { workspace = true }
log = { workspace = true }
