[package]
name = "osci-parsers"
version.workspace = true
edition.workspace = true

[features]
default = []
lua = ["mlua"]

[dependencies]
osci-core = { workspace = true }
glam = { workspace = true }
usvg = { workspace = true }
lyon = { workspace = true }
tobj = { workspace = true }
image = { workspace = true }
gif = { workspace = true }
symphonia = { workspace = true }
cosmic-text = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam = { workspace = true }

# Optional: Lua scripting requires LuaJIT
mlua = { workspace = true, optional = true }
