[package]
name = "osci-plugin"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
osci-core = { workspace = true }
osci-effects = { workspace = true }
osci-synth = { workspace = true }
osci-parsers = { workspace = true }
osci-gui = { workspace = true }
osci-net = { workspace = true }
nih_plug = { workspace = true }
nih_plug_egui = { workspace = true }
crossbeam = { workspace = true }
log = { workspace = true }
